objects/Existing_Facility__c.object
<CustomObject>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JLOC__c</fullName>
        <label>JLOC</label>
        <referenceTo>JLOC__c</referenceTo>
        <relationshipLabel>Existing Facilities</relationshipLabel>
        <relationshipName>Existing_Facilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Existing Facility</label>
    <nameField>
        <label>Facility/Exposure</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Existing Facilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>